<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_board"
            android:icon="@drawable/ic_board"
            android:title="@string/menu_board" />
        <item
            android:id="@+id/nav_setup"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setup" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_import"
            android:title="@string/menu_import" />

        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_export"
            android:title="@string/menu_export" />
    </group>
</menu>